--- a/client/src/components/styles/FaucetForm.css
+++ b/client/src/components/styles/FaucetForm.css
@@ -18,7 +18,8 @@ a {
     box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
     max-width: 492px;
     width: 95%;
-    background-image: linear-gradient(140.14deg,rgba(0,182,191,.15),rgba(27,22,89,.1) 86.61%),linear-gradient(321.82deg,#18134d,#1b1659)!important;
+    /* background-image: linear-gradient(140.14deg,rgba(0,182,191,.15),rgba(27,22,89,.1) 86.61%),linear-gradient(321.82deg,#18134d,#1b1659)!important; */
+    background-color: #1a1d1f !important;
     border-radius: 8px;
     height: fit-content;
 }
@@ -90,7 +91,7 @@ a {
     align-items: center;
     color: #333;
     height: 45px;
-    background-color:#14103f;
+    background-color:#2b2e30;
     margin-bottom: 8px;
     border-radius: 5px;
 }
@@ -153,8 +154,8 @@ a {
 }
 
 .send-button:hover {
-    background-color: #fff;
-    color: #14103f;
+    background-color: rgb(122, 122, 122);
+    color: #fff;
 }
 
 .send-button-disabled {
