--- a/client/src/components/styles/FaucetForm.css
+++ b/client/src/components/styles/FaucetForm.css
@@ -14,14 +14,25 @@ a {
     align-items: center;
 }
 
-.box {
+/* .box {
     box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
     max-width: 492px;
     width: 95%;
-    /* background-image: linear-gradient(140.14deg,rgba(0,182,191,.15),rgba(27,22,89,.1) 86.61%),linear-gradient(321.82deg,#18134d,#1b1659)!important; */
     background-color: #1a1d1f !important;
     border-radius: 8px;
     height: fit-content;
+} */
+
+.box {
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    max-width: 492px;
+    width: 100%;
+    background-image: linear-gradient( 140.14deg, rgba(0, 182, 191, 0.15), rgba(27, 22, 89, 0.1) 86.61% ), linear-gradient(321.82deg, #18134d, #1b1659) !important;
+    border-radius: 12px;
+    height: -moz-fit-content;
+    height: fit-content;
+    position: relative;
+    z-index: 1;
 }
 
 .box-header {
@@ -40,7 +51,7 @@ a {
 .banner {
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 340px;
+    background-size: 270px;
     /* background-color: rgb(26, 26, 28); */
     border-radius: 8px;
     height: 140px;
@@ -91,7 +102,7 @@ a {
     align-items: center;
     color: #333;
     height: 45px;
-    background-color:#2b2e30;
+    background-color: rgb(20 16 63);
     margin-bottom: 8px;
     border-radius: 5px;
 }
@@ -133,6 +144,21 @@ a {
     text-align: center;
     border-radius: 4px;
     margin-top: 20px;
+}
+.parent {
+    background-image: linear-gradient( var(--gradient-rotate, 246deg), #da2eef 7.97%, #2b6aff 49.17%, #39d0d8 92.1% );
+    padding: 1px;
+    border-radius: 12px;
+    /* width: 30%; */
+}
+.parentfooter {
+    background-image: linear-gradient( var(--gradient-rotate, 246deg), #da2eef 7.97%, #2b6aff 49.17%, #39d0d8 92.1% );
+    padding: 1px;
+    border-radius: 12px;
+    margin-top: 5px;
+}
+.shadow {
+    position: relative;
 }
 
 .button-container {
@@ -192,4 +218,26 @@ a {
 
 .back-button:hover {
     background-color: #333;
+}
+
+@media screen and (max-width:992px){
+    .banner {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 251px;
+        /* background-color: rgb(26, 26, 28); */
+        border-radius: 8px;
+        height: 140px;
+    }
+}
+
+@media screen and (max-width:768px){
+    .banner {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 251px;
+        /* background-color: rgb(26, 26, 28); */
+        border-radius: 8px;
+        height: 140px;
+    }
 }
