commit chnge logo

--- a/client/src/components/styles/FooterBox.css
+++ b/client/src/components/styles/FooterBox.css
@@ -8,7 +8,7 @@
 .footer-box {
     max-width: 375px;
     /* width: 95%; */
-    background-color: #18215b !important;
+    background-color:#011a28 !important;
     border-radius: 12px;
     height: -moz-fit-content;
     height: fit-content;
