--- a/client/src/components/styles/FaucetForm.css
+++ b/client/src/components/styles/FaucetForm.css
@@ -27,7 +27,7 @@ a {
     box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
     max-width: 492px;
     width: 100%;
-    background-image: linear-gradient( 140.14deg, rgba(0, 182, 191, 0.15), rgba(27, 22, 89, 0.1) 86.61% ), linear-gradient(321.82deg, #18134d, #1b1659) !important;
+    background-image: linear-gradient(321.82deg, #011a28,#011a28)  !important;
     border-radius: 12px;
     height: -moz-fit-content;
     height: fit-content;
@@ -146,13 +146,13 @@ a {
     margin-top: 20px;
 }
 .parent {
-    background-image: linear-gradient( var(--gradient-rotate, 246deg), #da2eef 7.97%, #2b6aff 49.17%, #39d0d8 92.1% );
+    background-image: linear-gradient( var(--gradient-rotate, 246deg), #57b3cb 7.97%, #2b6aff 49.17%, #39d0d8 92.1% );
     padding: 1px;
     border-radius: 12px;
     /* width: 30%; */
 }
 .parentfooter {
-    background-image: linear-gradient( var(--gradient-rotate, 246deg), #da2eef 7.97%, #2b6aff 49.17%, #39d0d8 92.1% );
+    background-image: linear-gradient( var(--gradient-rotate, 246deg), #57b3cb 7.97%, #2b6aff 49.17%, #39d0d8 92.1% );
     padding: 1px;
     border-radius: 12px;
     margin-top: 5px;
