--- a/client/src/components/styles/FaucetForm.css
+++ b/client/src/components/styles/FaucetForm.css
@@ -174,13 +174,13 @@ a {
     padding: 0 16px;
     border: 0px;
     border-radius: 4px;
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: #292344;
     cursor: pointer;
     text-transform: uppercase;
 }
 
 .send-button:hover {
-    background-color: rgb(122, 122, 122);
+    background-color:#292344;
     color: #fff;
 }
 
