--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,80 +1,137 @@
 body::-webkit-scrollbar {
-    width: 2px;
+  width: 2px;
 }
 
 body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgb(0, 0, 0);
+  box-shadow: inset 0 0 6px rgb(0, 0, 0);
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: rgb(113, 113, 113);
+  background-color: rgb(113, 113, 113);
 }
 
 .app {
-    font-family: Avenir,Helvetica,Arial,sans-serif;
-    padding-top: 5%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  padding-top: 5%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-
+.body22 {
+  background-image: url("/public/bg.svg");
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  position: absolute;
+    left: 0;
+    bottom: 0;
+    background-size: 100% 100%;
+}
 @media screen and (max-width: 1010px) {
-    .app {
-        padding-top: 10%;
-        padding-bottom: 10%;
-    }
+  .app {
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
 }
 .css-pyd4mq-control {
-    align-items: center;
-    background-color: hsl(0, 0%, 100%);
-    border-color: #111213 !important;
-    border-radius: 5px;
-    border-style: solid;
-    border-width: 1px;
-    cursor: default;
-    display: flex;
-    -webkit-box-flex-wrap: wrap;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    min-height: 38px;
-    outline: 0!important;
-    position: relative;
-    transition: all 100ms;
-    box-sizing: border-box;
-    background: rgb(41 35 68) !important;
+  align-items: center;
+  background-color: hsl(0, 0%, 100%);
+  border-color: #130f3f !important;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  cursor: default;
+  display: flex;
+  -webkit-box-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  min-height: 38px;
+  outline: 0 !important;
+  position: relative;
+  transition: all 100ms;
+  box-sizing: border-box;
+  background: #130f3f !important;
 }
-.css-pyd4mq-control:hover{
-    background-color:  rgb(41 35 68) !important;
-    opacity: .8;
+.css-pyd4mq-control:hover {
+  background-color: #130f3f !important;
+  opacity: 0.8;
 }
-.css-pyd4mq-control:focus,.css-pyd4mq-control:active{
-    background-color: rgb(41 35 68)  !important;
-    opacity: .8;
-    border-color: transparent !important;
+.css-pyd4mq-control:focus,
+.css-pyd4mq-control:active {
+  background-color: #130f3f !important;
+  opacity: 0.8;
+  border-color: transparent !important;
 }
-.css-11gcyr5-control{
-    background: rgb(41 35 68) !important;   
-    border-color: transparent !important;
+.css-11gcyr5-control {
+  background: rgb(41 35 68) !important;
+  border-color: transparent !important;
 }
 
 select option:focus,
 select option:checked,
 select option:active {
-    background: linear-gradient(#292344,#292344)!important;
-    background-color:#292344 !important; 
-    color: #ffed00 !important;
+  background: linear-gradient(#292344, #292344) !important;
+  background-color: #292344 !important;
+  color: #ffed00 !important;
 }
-.css-18mi93w-menu:focus{
-   background-color:#292344 !important;
+.css-18mi93w-menu:focus {
+  background-color: #130f3f !important;
 }
 
 .body_bg {
-    /* background:#000 url("/client/public/bg.png");
+  /* background:#000 url("/client/public/bg.png");
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: contain; */
 }
-.box-header input{
-    color:transparent !important;
-
+.box-header input {
+  color: transparent !important;
+}
+.cyberpunk-bg-light::before {
+  left: 15px;
+  background-color: #39d0d8;
+  box-shadow: 0 0 140px 55px #39d0d8aa;
+}
+.cyberpunk-bg-light::after {
+  right: 15px;
+  background-color: #e300ff;
+  box-shadow: 0 0 140px 55px #e300ffaa;
+}
+.cyberpunk-bg-light::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  bottom: 15px;
+  z-index: -1;
+  pointer-events: none;
+  width: 60%;
+  border-radius: 50%;
+  opacity: 0.45;
+  mix-blend-mode: hard-light;
+}
+.cyberpunk-bg-light::after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  bottom: 15px;
+  z-index: -1;
+  pointer-events: none;
+  width: 60%;
+  border-radius: 50%;
+  opacity: 0.45;
+  mix-blend-mode: hard-light;
+}
+.css-1hb7zxy-IndicatorsContainer {
+  display: none !important;
+}
+.text_style {
+  background: -webkit-linear-gradient(#f77133, #ff9136);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 15px !important;
+}
+.text_style2 {
+  background: -webkit-linear-gradient(#f77133, #ff9136);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 12px !important;
 }
