--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar-thumb {
 .css-pyd4mq-control {
     align-items: center;
     background-color: hsl(0, 0%, 100%);
-    border-color: #111213 !important;
+    border-color: #f6f8fb !important;
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
@@ -41,31 +41,82 @@ body::-webkit-scrollbar-thumb {
     position: relative;
     transition: all 100ms;
     box-sizing: border-box;
-    background: rgb(41 35 68) !important;
+    background: #f6f8fb !important;
+}
+.css-pyd4mq-control-disabled {
+    align-items: center;
+    background-color: hsl(0, 0%, 100%) !important;
+    border-color: #f6f8fb !important;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    cursor: default;
+    display: flex;
+    -webkit-box-flex-wrap: wrap;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    min-height: 38px;
+    outline: 0!important;
+    position: relative;
+    transition: all 100ms;
+    box-sizing: border-box;
+    background: #f6f8fb !important;
+}
+
+.css-r65kg0-control {
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: hsl(0, 0%, 95%) !important;
+    border-color: #f6f8fb !important;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    cursor: default;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    min-height: 38px;
+    outline: 0!important;
+    position: relative;
+    -webkit-transition: all 100ms;
+    transition: all 100ms;
+    box-sizing: border-box;
+    background: #f6f8fb !important;
+   
 }
 .css-pyd4mq-control:hover{
-    background-color:  rgb(41 35 68) !important;
+    background-color: #f6f8fb !important;
     opacity: .8;
 }
 .css-pyd4mq-control:focus,.css-pyd4mq-control:active{
-    background-color: rgb(41 35 68)  !important;
+    background-color:#f6f8fb   !important;
     opacity: .8;
     border-color: transparent !important;
 }
 .css-11gcyr5-control{
-    background: rgb(41 35 68) !important;   
+    background:#f6f8fb  !important;   
     border-color: transparent !important;
 }
 
 select option:focus,
 select option:checked,
 select option:active {
-    background: linear-gradient(#292344,#292344)!important;
-    background-color:#292344 !important; 
+    background: linear-gradient(#f6f8fb,#f6f8fb)!important;
+    background-color:#f6f8fb !important; 
     color: #ffed00 !important;
 }
 .css-18mi93w-menu:focus{
-   background-color:#292344 !important;
+   background-color:#f6f8fb !important;
 }
 
 .body_bg {
@@ -77,4 +128,11 @@ select option:active {
 .box-header input{
     color:transparent !important;
 
+}
+.text-head{
+    color:#02C675;
+    font-size: 14px !important;
+}
+.css-1hb7zxy-IndicatorsContainer {
+    display: none !important;
 }
