--- a/client/src/components/styles/FooterBox.css
+++ b/client/src/components/styles/FooterBox.css
@@ -8,12 +8,12 @@
 .footer-box {
     max-width: 375px;
     /* width: 95%; */
-    background-color:#011a28 !important;
+    background-color: #fff !important;
     border-radius: 12px;
     height: -moz-fit-content;
     height: fit-content;
     /* margin-top: 20px; */
-    color: rgb(180, 180, 183);
+    color:#7b7f84;
     position: relative;
 }
 
@@ -48,8 +48,8 @@
 }
 
 .add-network {
-    background-color: rgba(255, 255, 255, 0.15);
-    color: darkgrey;
+    background-color: #e7f3f8;
+    color: #77838f;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -62,8 +62,8 @@
 }
 
 .add-network:hover {
-    background-color: black;
-    color: white;
+    background-color: #cceddb;
+    color: #198f50;
 }
 
 @media screen and (max-width: 500px) {
