--- a/client/src/components/styles/FaucetForm.css
+++ b/client/src/components/styles/FaucetForm.css
@@ -24,10 +24,11 @@ a {
 } */
 
 .box {
-    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    /* box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%); */
     max-width: 492px;
     width: 100%;
-    background-image:linear-gradient(321.82deg, #171752,#171752)  !important;
+    /* background-image:linear-gradient(321.82deg, #171752,#171752)  !important; */
+    background: #5c5858;
     border-radius: 12px;
     height: -moz-fit-content;
     height: fit-content;
@@ -102,7 +103,8 @@ a {
     align-items: center;
     color: #333;
     height: 45px;
-    background-color: rgb(20 16 63);
+    /* background-color: rgb(20 16 63); */
+    background-color: rgb(23 23 25);
     margin-bottom: 8px;
     border-radius: 5px;
 }
@@ -146,13 +148,13 @@ a {
     margin-top: 20px;
 }
 .parent {
-    background-image: linear-gradient( var(--gradient-rotate, 246deg), #57b3cb 7.97%, #2b6aff 49.17%, #39d0d8 92.1% );
+    /* background-image: linear-gradient( var(--gradient-rotate, 246deg), #57b3cb 7.97%, #2b6aff 49.17%, #39d0d8 92.1% ); */
     padding: 1px;
     border-radius: 12px;
     /* width: 30%; */
 }
 .parentfooter {
-    background-image: linear-gradient( var(--gradient-rotate, 246deg), #57b3cb 7.97%, #2b6aff 49.17%, #39d0d8 92.1% );
+    /* background-image: linear-gradient( var(--gradient-rotate, 246deg), #57b3cb 7.97%, #2b6aff 49.17%, #39d0d8 92.1% ); */
     padding: 1px;
     border-radius: 12px;
     margin-top: 5px;
@@ -175,7 +177,7 @@ a {
     border: 0px;
     border-radius: 4px;
     /* background-color: #130f3f; */
-    background: linear-gradient(to right,#d2793a, #ffcb6c);
+    background: linear-gradient(to right,#d2793a, #df8534);
     cursor: pointer;
     text-transform: uppercase;
 }
@@ -193,7 +195,7 @@ a {
     padding: 0 16px;
     border: 0px;
     border-radius: 4px;
-  background: linear-gradient(to right,#d2793a, #ffcb6c);
+  background: #df8534;
  
     cursor: not-allowed;
     text-transform: uppercase;
@@ -249,7 +251,7 @@ a {
     -ms-flex-align: center;
     align-items: center;
     background-color: hsl(0, 0%, 95%);
-    border-color: #130f3d !important;
+    border-color: rgb(23 23 25) !important;
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
@@ -271,5 +273,5 @@ a {
     -webkit-transition: all 100ms;
     transition: all 100ms;
     box-sizing: border-box;
-    background: #130f3d !important; 
+    background: rgb(23 23 25) !important; 
 }
